# ruskery

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.e2e.yml  install.sh
.github/workflows/: ci.yml  dashboard-e2e.yml  docker-e2e.yml  oci-conformance.yml  release.yml
migrations/: 0001_init.sql  0002_token_scope.sql  0003_token_perm_cap.sql  0004_analytics.sql  0005_referrers_index.sql  0006_quota.sql  0007_pull_through.sql  0008_imports.sql  0009_image_pulls.sql
packaging/: ruskery.service
src/: analytics.rs  cache.rs  config.rs  error.rs  gc.rs  import.rs  main.rs  models.rs  providers.rs  proxy.rs  rate_limit.rs  server.rs  state.rs  tls.rs  util.rs  web.rs
src/api/: mod.rs
src/auth/: mod.rs  oauth.rs  password.rs  pat.rs  rbac.rs  session.rs  token.rs
src/db/: analytics.rs  audit.rs  content.rs  domains.rs  imports.rs  mod.rs  orgs.rs  settings.rs  users.rs
src/registry/: auth.rs  blobs.rs  manifests.rs  mod.rs  tags.rs  uploads.rs
src/storage/: mod.rs
tests/: e2e.rs  load.rs
tests/common/: mod.rs
tests/docker/: push_pull.sh
web/: components.json  jsconfig.json  nuxt.config.ts  package.json  playwright.config.ts
web/app/assets/css/: main.css
web/app/components/: ConfirmDialog.vue  ModeToggle.vue  UiBadge.vue  UiButton.vue  UiCard.vue
web/app/components/ui/: Badge.vue  Button.vue  Card.vue  Chart.vue  Icon.vue  Input.vue  Modal.vue
web/app/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue
web/app/components/ui/select/: SelectContent.vue
web/app/composables/: format.ts  useApi.ts  useConfirm.ts
web/app/layouts/: default.vue
web/app/lib/: button-variants.js
web/app/middleware/: auth.global.ts
web/app/pages/: index.vue  login.vue  settings.vue  setup.vue  tokens.vue
web/app/pages/orgs/: index.vue
web/app/pages/orgs/[slug]/: analytics.vue  index.vue  members.vue  settings.vue  teams.vue
web/app/pages/orgs/[slug]/repos/: [...name].vue
web/tests/e2e/: analytics.spec.ts  auth.spec.ts  create-repo.spec.ts  guards.spec.ts  members.spec.ts  orgs.spec.ts  repos.spec.ts  run-server.sh  settings.spec.ts  setup.spec.ts  teams.spec.ts  theme.spec.ts  tokens.spec.ts
web/tests/e2e/fixtures/: helpers.ts  seed-image.ts
web/tests/e2e/setup/: auth.setup.ts
